--- a/poi-tools/src/main/webapp/div/form.html
+++ b/poi-tools/src/main/webapp/div/form.html
@@ -17,7 +17,7 @@
                         <label class="col-md-1 control-label">文件内容</label>
                         <div class="col-md-2 ">
                             <label class="radio-inline"><input type="radio" name="import" value="gp"
-                                                               ng-model="taskInfo.import">位置聚集点</label>
+                                                               ng-model="taskInfo.import" ng-click="taskInfo.for='geo'">位置聚集点</label>
                             <label class="radio-inline"><input type="radio" name="import" value="co"
                                                                ng-model="taskInfo.import">经纬度</label>
                         </div>
@@ -41,11 +41,11 @@
                         <label class="col-md-1 control-label">查询内容</label>
                         <div class="col-md-11 ">
                             <label class="radio-inline"><input type="radio" name="for" value="geo"
-                                                               ng-model="taskInfo.for">行政区域</label>
-                            <label class="radio-inline"><input type="radio" name="for" value="poi"
-                                                               ng-model="taskInfo.for">周边poi</label>
-                            <label class="radio-inline"><input type="radio" name="for" value="cell"
-                                                               ng-model="taskInfo.for">周边小区</label>
+                                                               ng-model="taskInfo.for">社区街道</label>
+                            <label class="radio-inline" ng-show="taskInfo.import!='gp'"><input type="radio" name="for" value="poi"
+                                                               ng-model="taskInfo.for">周边 POI</label>
+                            <label class="radio-inline" ng-show="taskInfo.import!='gp'"><input type="radio" name="for" value="cell"
+                                                               ng-model="taskInfo.for">最近小区</label>
                         </div>
                     </div>
 
@@ -54,7 +54,7 @@
                         <div class="col-md-2">
                             <input type="number" name="radius" id="radius" class="form-control"
                                    placeholder="请填写3000以内数字"
-                                   ng-model="taskInfo.radius" ng-maxlength="4">米范围内
+                                   ng-model="taskInfo.radius" >米范围内
                         </div>
                     </div>
                     <div class="form-group"  ng-show="taskInfo.for=='poi'">
